# TonNurako2

./: .editorconfig  .gitattributes  .gitignore  .travis.yml  Directory.Build.props  README.md  Rakefile  TonNurako2.sln  configure  install-sh
Demo/Simple/: Program.cs  Simple.csproj
Demo/TnkEyes/: Eyes.cs  Main.cs  TnkEyes.csproj  Transform.cs
Demo/Widgets/: Widgets.cs  Widgets.csproj
Demo/XRender/: RenderMain.cs  XRender.csproj
TonNurako/: TonNurako.csproj
TonNurakoEx/: .gitignore  CMakeLists.txt  ClassDef.c  ClassDef.h  DlSym.c  GNUmakefile  TonNurako.ExtremeSports.Targets  TonNurako.c  TonNurako.h  X11ExtRenderImp.c  X11ExtShapeImp.c  X11ImpGC.c  X11Import.c  X11ImportLocale.c  X11ImportMacro.c  XftImport.c  XkbImport.c  XmCreateFuncs.c  XmImport.c  XrmImport.c  XtImport.c  XtImportMacro.c  config.sh
TonNurakoEx/check.localized/: check_fc.c  check_motif.c  check_xext.c  check_xft.c  check_xlib.c  check_xmu.c  check_xrender.c  find_Motif.sh  find_Xlib.sh  try_compile.sh
TonNurakoEx/check.localized/.localized/: ja.strings
TonNurakoEx/import.app/Contents/: Info.plist
TonNurakoEx/import.app/Contents/MacOS/: .gitignore
TonNurakoEx/import.app/Contents/Resources/: ImpCheck.c
TonNurakoEx/iso.app/: Depend.map  Fc.ResourceId.swift  X.Atom.swift  X.Constant.cbl  X.Constant.iso  X.KeySym.swift  X.Proto.swift  X.StringConstant.swift  Xm.Constant.iso  Xm.ResourceId.iso  Xm.StringConstant.iso  Xt.Constant.swift  Xt.ResourceId.swift  Xt.StringConstant.swift
TonNurakoEx/iso.app/Contents/: Info.plist
TonNurakoEx/iso.app/Contents/MacOS/: .gitignore
TonNurakoEx/iso.app/Contents/Resources/: AssertMacros.h  MotifCheck.c  Shop.c  icon.icns
TonNurakoEx/scripts.app/: const_ex.py  map.py  mk_dep.py  plist.py
TonNurakoEx/scripts.app/Contents/: Info.plist
TonNurakoEx/scripts.app/Contents/MacOS/: .gitignore
TonNurakoEx/scripts.app/Contents/Resources/: LibCheck.c
TonNurakoEx/tmpfile.app/Contents/: Info.plist
TonNurakoEx/tmpfile.app/Contents/MacOS/: .gitignore
TonNurakoEx/tmpfile.app/Contents/Resources/: .gitignore
TonNurakoEx/tmpfile.app/Contents/_CodeSignature/: .gitignore
TonNurakoTest/: TonNurakoTest.sln  headless.sh  run.sh
(+254 files in other folders)
